--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <spring-cloud.version>2021.0.1</spring-cloud.version>
     </properties>
 
+
+
     <dependencyManagement>
         <dependencies>
             <!-- Spring Boot 依赖管理 -->
@@ -75,7 +77,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-commons</artifactId>
-            <version>3.1.1</version> <!-- Spring Cloud 2021.0.1 对应的版本 -->
+            <version>3.1.1</version>
         </dependency>
 
         <!-- Spring Cloud LoadBalancer -->
@@ -84,13 +86,15 @@
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
         </dependency>
 
-        <!-- Spring Boot Actuator -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
+            <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
-
-
+        <!-- 可选：更高性能缓存实现 -->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
 
 
     </dependencies>
